[package]
name = "sui-faucet"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
bin-version.workspace = true
clap.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
sui-sdk.workspace = true
sui-config.workspace = true
sui-keys.workspace = true
shared-crypto.workspace = true

[dev-dependencies]
serde_json.workspace = true
test-cluster.workspace = true
wiremock.workspace = true

[[bin]]
name = "one-faucet"
path = "src/main.rs"
